--- a/shopping/shopping_list/templates/shopping_list/list.html
+++ b/shopping/shopping_list/templates/shopping_list/list.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Homepage</title>
-</head>
-<body>
-	<h1>listttttt</h1>
-	<p>blabla</p>
-</body>
-</html>
+{% extends 'shopping_list/base.html' %}
+
+{% block content %}
+        <h1>Articles List</h1>
+{% endblock %}
