--- a/shopping/shopping_list/templates/shopping_list/list.html
+++ b/shopping/shopping_list/templates/shopping_list/list.html
@@ -1,5 +1,15 @@
 {% extends 'shopping_list/base.html' %}
 
 {% block content %}
-        <h1>Articles List</h1>
+        <h1>Shopping List</h1>
+        <ul>
+        	<li><a href="{% url 'shopping_list:add' %}" class="highlight">Add Item</a></li>
+        </ul>
+        <div class="items">
+		{% for item in items %}
+			<div class = "item">
+				<h2><a href="#">{{ item.item }}</h2>
+			</div>
+		{% endfor %}
+		</div>
 {% endblock %}
