--- a/shopping/shopping_list/templates/shopping_list/add_item.html
+++ b/shopping/shopping_list/templates/shopping_list/add_item.html
@@ -3,8 +3,15 @@
 {% block content %}
         <h1>Shopping List</h1>
         <form class="add-item" action="{% url 'shopping_list:add' %}" method="post">
-        	{% csrf_token %}
         	{{ add }}
-        	<input type="submit" value="Add">
+        	{% csrf_token %}
+        	<input type="submit" value="add">
         </form>
+        <div class="items">
+		{% for item in items %}
+			<div class = "item">
+				<h2><a href="#">{{ item.item }}</h2>
+			</div>
+		{% endfor %}
+		</div>
 {% endblock %}
