--- a/shopping/shopping_list/templates/shopping_list/list.html
+++ b/shopping/shopping_list/templates/shopping_list/list.html
@@ -6,6 +6,7 @@
         	<li><a href="{% url 'shopping_list:add' %}" class="highlight">Add Item</a></li>
         </ul>
         <div class="items">
+        {% csrf_token %}
 		{% for item in items %}
 			<div class = "item">
 				<h2><a href="#">{{ item.item }}</h2>
