--- a/shopping/shopping_list/templates/shopping_list/navbar.html
+++ b/shopping/shopping_list/templates/shopping_list/navbar.html
@@ -7,10 +7,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="add" placeholder="Item name" aria-label="Add item">
-        <button class="btn btn-outline-success" type="submit">Add</button>
-      </form>
+
+    <form class="add-item" action="{% url 'shopping_list:add_item' %}" method="post">
+      {{ add }}
+      {% csrf_token %}
+      <input class="form-control me-2" type="add" placeholder="Item name" aria-label="Add item">
+      <button class="btn btn-outline-success" type="submit">Add</button>
+    </form>
     </div>
   </div>
 </nav>
