--- a/shopping/shopping_list/templates/shopping_list/list.html
+++ b/shopping/shopping_list/templates/shopping_list/list.html
@@ -1,15 +1,25 @@
 {% extends 'shopping_list/base.html' %}
 
 {% block content %}
-        <div class="items">
-        {% csrf_token %}
-		{% for item in items %}
-			<ul class="list-group">
-			  <li class="list-group-item">
-			    {{ item }}
-			    <a href="{% url 'shopping_list:delete_item' item.id %}" class ="btn btn-outline-danger btn-sm">Delete item</a>
-			  </li>
-			 </ul>
-		{% endfor %}
-		</div>
+	<ul>
+		<form class="d-inline-flex" action="{% url 'shopping_list:add_item' %}" method="post" >
+			<div class="d-inline-flex justify-content-between">
+			      {{ add }}
+			      {% csrf_token %}
+			      <button class="btn btn-primary" type="submit">Add</button>
+		    </div>
+		</form>
+		<br>
+	</ul>
+    <div class="items">
+    {% csrf_token %}
+	{% for item in items %}
+	<ul>
+		  <li class="list-group-item">
+		    {{ item }}
+		    <a href="{% url 'shopping_list:delete_item' item.id %}" class ="btn btn-outline-danger btn-sm">Delete item</a>
+		  </li>
+	 </ul>
+	{% endfor %}
+	</div>
 {% endblock %}
