--- a/shopping/shopping_list/templates/shopping_list/navbar.html
+++ b/shopping/shopping_list/templates/shopping_list/navbar.html
@@ -1,19 +1,12 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="{% url 'shopping_list:list' %}">Shopping List</a>
+  <div class="container">
+      <a class="navbar-brand" href="{% url 'shopping_list:list' %}">Shopping List</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       </ul>
-
-    <form class="add-item" action="{% url 'shopping_list:add_item' %}" method="post">
-      {{ add }}
-      {% csrf_token %}
-      <!-- <input class="form-control me-2" type="add" placeholder="Item name" name="item" id="id_item" aria-label="Add item"> -->
-      <button class="btn btn-outline-success" type="submit">Add</button>
-    </form>
     </div>
   </div>
 </nav>
