--- a/shopping/shopping_list/templates/shopping_list/add_item.html
+++ b/shopping/shopping_list/templates/shopping_list/add_item.html
@@ -7,7 +7,7 @@
 <div class="items">
 	{% for item in items %}
 		<div class = "item">
-			<h2><a href="#">{{ item.item }}</h2>
+			<h2><a href="#">{{ name.name }}</h2>
 		</div>
 	{% endfor %}
 </div>
