--- a/shopping/shopping_list/templates/shopping_list/list.html
+++ b/shopping/shopping_list/templates/shopping_list/list.html
@@ -41,6 +41,7 @@
 	  		</thead>
 	  		<tbody>
 	  			{% for item in items %}
+	  				{% if item.is_active == True %}
 				    <tr>
 				      	<td class="text-end">
 				      		<a href="{% url 'shopping_list:delete_item' item.id %}" class ="btn btn-outline-danger btn-sm">הסר</a>
@@ -55,6 +56,7 @@
 				      <td class="text-end">{{ item.name }}</td>
 				      <th scope="row" class="text-end">1</th>
 				    </tr>
+					{% endif %}
 			    {% endfor %}
 			</tbody>
 		</table>
