--- a/shopping/shopping_list/templates/shopping_list/table_of_items.html
+++ b/shopping/shopping_list/templates/shopping_list/table_of_items.html
@@ -1,5 +1,4 @@
-
-	<div class="d-flex">
+<div class="d-flex">
 		<table class="table" style="height: 80px;">
 			<thead>
 				<tr>
@@ -7,34 +6,23 @@
 					<th scope="col">כמות</th>
 					<th scope="col">תגים רלוונטים</th>
 					<th scope="col">פעולות</th>
-	    		</tr>
-	  		</thead>
-	  		<tbody>
-	  			{% for item in items %}
-	  				{% if item.is_active == True %}
-				    <tr>
-
-						<td class="align-baseline">{{ item.name }}</td>
-						<th scope="row" class="align-baseline">1</th>
-						<td class="align-baseline">
-							{%for tag in item.tags.all %}
-							<span class= "badge bg-{{ tag.color }}" >
-								{{ tag }}
-							</span>
-							{% endfor %}
-						</td>
-						<td class="align-baseline">
-							<a href="{% url 'shopping_list:delete_item' item.id %}">
-							<button type="button" class="btn btn-outline-danger btn-sm">
-							  <svg id="i-close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="15" height="25" fill="none" stroke="red" stroke-linecap="round" stroke-linejoin="round" stroke-width="4">
-								<path d="M2 30 L30 2 M30 30 L2 2" />
-							  </svg>
-							</button>
-						  </a>
-						</td>
-				    </tr>
-					{% endif %}
-			    {% endfor %}
+				</tr>
+			</thead>
+			<tbody>
+				<template id="single-line">
+				<tr>
+					<td class="align-baseline"></td>
+					<th scope="row" class="align-baseline">1</th>
+					<td class="align-baseline" id="tags"></td>
+					<td class="align-baseline">
+						<button type="button" class="btn btn-outline-danger btn-sm">
+						<svg id="i-close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="15" height="25" fill="none" stroke="red" stroke-linecap="round" stroke-linejoin="round" stroke-width="4">
+							<path d="M2 30 L30 2 M30 30 L2 2" />
+						</svg>
+						</button>
+					</td>
+				</tr>
+				</template>
 			</tbody>
 		</table>
-	</div>
+</div>
