--- a/shopping/assets/style.css
+++ b/shopping/assets/style.css
@@ -1,3 +1,14 @@
 .btn-outline-danger:hover svg {
 							    stroke: white;
 							}
+.tag {
+	padding: 1px 9px 2px;
+	font-size: 12.025px;
+	font-weight: bold;
+	white-space: nowrap;
+	color: #ffffff;
+	background-color: #70b9c5;
+	-webkit-border-radius: 9px;
+	-moz-border-radius: 9px;
+	border-radius: 4px;
+}
