Refactor code for improved readability and efficiency, switch from http requests to axios library

--- a/shopping/shopping_list/templates/shopping_list/list.html
+++ b/shopping/shopping_list/templates/shopping_list/list.html
@@ -39,6 +39,8 @@
 
 	<!-- Items list -->
 	{% include 'shopping_list/table_of_items.html' %}
+
+	<!-- Add item form -->
 	<div class="d-flex">
 			<form class="d-inline-flex" action="{% url 'shopping_list:add_item' %}" method="post" >
 				<datalist id="datalistOptions">
