--- a/shopping/assets/style.css
+++ b/shopping/assets/style.css
@@ -7,8 +7,31 @@
 	font-weight: bold;
 	white-space: nowrap;
 	color: #ffffff;
-	background-color: #70b9c5;
 	-webkit-border-radius: 9px;
 	-moz-border-radius: 9px;
 	border-radius: 4px;
 }
+
+.button-tag {
+	border: 1px solid #0d6efd;
+	background-color: white;
+	color: #0d6efd;
+	padding: 6px 9px;
+	font-size: 16px;
+	border-radius: 4px;
+	cursor: pointer;
+	margin: 5px;
+  }
+
+.button-tag:hover {
+	background-color: #ddd;
+	color: #0d6efd;
+  }
+
+.button-tag:active {
+	background-color: #0d6efd;
+	color: #0d6efd;
+  }
+
+
+
