add option to edit an item - wip

--- a/shopping/shopping_list/templates/shopping_list/table_of_items.html
+++ b/shopping/shopping_list/templates/shopping_list/table_of_items.html
@@ -17,11 +17,17 @@
 						</th>
 						<td class="align-baseline" id="tags"></td>
 						<td class="align-baseline">
-							<button type="button" class="btn btn-outline-danger btn-sm">
-							<svg id="i-close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="15" height="25" fill="none" stroke="red" stroke-linecap="round" stroke-linejoin="round" stroke-width="4">
-							<path d="M2 30 L30 2 M30 30 L2 2" />
-							</svg>
+							<button id ="delete-button" type="button" class="btn btn-outline-danger btn-sm">
+								<svg id="i-close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="15" height="25" fill="none" stroke="red" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
+								<path d="M2 30 L30 2 M30 30 L2 2" />
+								</svg>
 							</button>
+							<button id ="edit-button" type="button" class="btn btn-outline-primary btn-sm">
+								<svg id="i-edit" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="15" height="25" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
+									<path d="M30 7 L25 2 5 22 3 29 10 27 Z M21 6 L26 11 Z M5 22 L10 27 Z" />
+								</svg>
+							</button>
+							
 						</td>
 					</tr>
 				</template>
