improve delete function

--- a/shopping/shopping_list/templates/shopping_list/table_of_items.html
+++ b/shopping/shopping_list/templates/shopping_list/table_of_items.html
@@ -17,7 +17,7 @@
 						</th>
 						<td class="align-baseline" id="tags"></td>
 						<td class="align-baseline">
-							<button type="button" class="btn btn-outline-danger btn-sm">
+							<button type="button" id ="delete-button" class="btn btn-outline-danger btn-sm">
 							<svg id="i-close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="15" height="25" fill="none" stroke="red" stroke-linecap="round" stroke-linejoin="round" stroke-width="4">
 							<path d="M2 30 L30 2 M30 30 L2 2" />
 							</svg>
